test_regress/t/t_assert_prop_consec_rep_bad.out
%Error: t/t_assert_prop_consec_rep_bad.v:12:39: Expecting expression to be constant, but variable isn't const: 'n'
                                              : ... note: In instance 't'
   12 |   assert property (@(posedge clk) a [*n] |-> 1);
      |                                       ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_assert_prop_consec_rep_bad.v:12:37: Consecutive repetition count must be constant expression (IEEE 1800-2023 16.9.2)
                                              : ... note: In instance 't'
   12 |   assert property (@(posedge clk) a [*n] |-> 1);
      |                                     ^~
%Error-UNSUPPORTED: t/t_assert_prop_consec_rep_bad.v:15:37: Unsupported: [*0] consecutive repetition
                                                          : ... note: In instance 't'
   15 |   assert property (@(posedge clk) a [*0] |-> 1);
      |                                     ^~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_assert_prop_consec_rep_bad.v:18:37: Consecutive repetition max count must be >= min count (IEEE 1800-2023 16.9.2)
                                              : ... note: In instance 't'
   18 |   assert property (@(posedge clk) a [*3:1] |-> 1);
      |                                     ^~
%Error: t/t_assert_prop_consec_rep_bad.v:21:41: Expecting expression to be constant, but variable isn't const: 'n'
                                              : ... note: In instance 't'
   21 |   assert property (@(posedge clk) a [*1:n] |-> 1);
      |                                         ^
%Error: t/t_assert_prop_consec_rep_bad.v:21:37: Consecutive repetition max count must be constant expression (IEEE 1800-2023 16.9.2)
                                              : ... note: In instance 't'
   21 |   assert property (@(posedge clk) a [*1:n] |-> 1);
      |                                     ^~
%Error-UNSUPPORTED: t/t_assert_prop_consec_rep_bad.v:24:37: Unsupported: [*N:0] consecutive repetition with zero max count
                                                          : ... note: In instance 't'
   24 |   assert property (@(posedge clk) a [*0:0] |-> 1);
      |                                     ^~
%Error: Exiting due to
